QtProtobuf: add escaping for Qt C++ keywords

Append the '_' suffix to the field names that are qualified as
reserved Qt keywords.

Task-number: QTBUG-123400
Change-Id: I00805d98c77ec14747a9cd45a534dbd3b3db817b
Reviewed-by:  Alexey Edelev <alexey.edelev@qt.io>
(cherry picked from commit 344f7fe150b0904b122c59b8d3a430b364b82b0f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 13dc9800bdcafc02a3df8be143d850af2052b844)